# uwp-injector

./: .gitattributes  CMakeLists.txt  README.md  _build.bat  _inject.bat
.github/workflows/: ci.yml
injector/: CMakeLists.txt  clean.bat  main.cpp
injector/cmake/: embedded.cmake
injector/src/: main.cpp
